# x32-recorder

./: .gitignore  API.md  C_EXTENSION.md  C_EXTENSION_IMPLEMENTATION.md  C_EXTENSION_QUICKSTART.md  README.md  REORGANIZATION.md  ROADMAP.md  build_extension.bat  build_extension.sh  build_frontend.bat  build_frontend.py  manage_services.bat  manage_services.py  manage_services.sh  pyproject.toml  setup.py  test_extension.py
audio_writer_ext/: README.md  audio_writer.c
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: Navigation.vue  RecordingControls.vue  RecordingsList.vue  TemplateManager.vue
frontend/src/components/icons/: AlertIcon.vue  CalendarIcon.vue  (+16 more)
frontend/src/router/: index.js
frontend/src/services/: apiService.js
frontend/src/views/: RecorderView.vue  TemplatesView.vue
x32recorder/: controller.py  manage.py
x32recorder/recorder/: admin.py  api_urls.py  api_views.py  apps.py  models.py  serializers.py  urls.py  views.py
x32recorder/recorder/migrations/: 0001_initial.py  0002_alter_recording_duration.py  0002_recording_template.py  0003_recording_started_at_recordingmarker.py  0003_recordingtemplate_recordingtemplatechannel_and_more.py  0004_recordingtemplatechannel_stereo.py  0005_remove_recording_channel_count_recording_channels.py  0006_recording_audiodevice_index.py  0007_remove_recordingtemplatechannel_stereo.py
x32recorder/recorder/templates/: index.html
x32recorder/x32recorder/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
(+1 files in other folders)
