[tool.poetry]
name = "x32-recorder"
version = "0.1.0"
description = ""
authors = ["Tobias Reineke <tobi@g3th.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
