[tool.poetry]
name = "x32-recorder"
version = "0.1.0"
description = ""
authors = ["Tobias Reineke <tobi@g3th.net>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<4"
Django = "^4.1.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
